--- a/バックエンド開発メモ/7-テスト・デバッグ.md
+++ b/バックエンド開発メモ/7-テスト・デバッグ.md
@@ -23,7 +23,6 @@ RDSの作成はまだにして、ローカルでAPIリクエスト受信からDB
 - [x] リファクタリングして不必要なコードを削除する
   - [x] DBRepoでその関数では使わない関数を削除する
 - Site/FetchCloudArticleをテストが未実装なのでモックを使って実装する
-  - 必要なくまた細かくチェックしないだろうから今はしない
 
 ## 検証できたら本番用のLambda関数を作る
 - [x] 全てのLambda関数をDockerコンテナにビルドする
@@ -168,11 +167,15 @@ ERROR: failed to solve: process "/bin/sh -c GOOS=linux GOARCH=arm64 CGO_ENABLED=
 - [x] 検索履歴を編集する処理でエラー
   - [x] userのほうのコードも問題だから修正する
 - TestApiUserPart1のデバッグが完了した
-### Site関数をデバッグ
-- TestApiSitePart3で失敗
-- 2023年8月20日全てのテストをパスした
-- これにてバックエンドの開発は一応完了した
 
 # APIGWなどのクラウド構成を定義・構築する
 - [x] 全てのLambdaを定義してAPIGWでエンドポイントを作成する
   - [x] APIGWにOpenAPIを適用する
+
+# Site関数をデバッグ
+- TestApiSitePart3で失敗
+- 2023年8月20日全てのテストをパスした
+
+# 初期実装完了
+これにてバックエンドの開発は一応完了した
+
